--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-tabs": "^2.3.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-observable": "^1.0.0",
+    "redux-thunk": "^2.3.0",
+    "rxjs": "^6.3.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
