--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "is-equal": "^1.5.5",
     "loadash": "^1.0.0",
     "node-sass-chokidar": "^1.3.4",
     "react": "^16.6.3",
@@ -17,6 +18,7 @@
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.0.0",
     "redux-thunk": "^2.3.0",
+    "redux-watch": "^1.1.1",
     "rxjs": "^6.3.3"
   },
   "scripts": {
